feat: add HTTP API server with FastAPI alongside SMTP server

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,16 @@ SMTP_PASSWORD=your_app_password_here
 # Enable TLS for secure connection (required for Gmail)
 ENABLE_TLS=true
 
+# Enable authentication (true/false)
+ENABLE_AUTH=false
+
 # Maximum message size in bytes (25MB)
 MAX_MESSAGE_SIZE=26214400
+
+# HTTP Server Configuration
+HTTP_HOST=0.0.0.0
+HTTP_PORT=8000
+API_PREFIX=/api/v1
+
+# Debug mode (true/false)
+DEBUG=false
