--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ ENABLE_AUTH=false
 # Maximum message size in bytes (25MB)
 MAX_MESSAGE_SIZE=26214400
 
+# JWT Authentication
+JWT_SECRET_KEY=your_very_secure_secret_key_change_this
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=1440  # 24 hours
+
 # HTTP Server Configuration
 HTTP_HOST=0.0.0.0
 HTTP_PORT=8000
