refactor: simplify Dockerfile by removing multi-stage build and add new dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: omsurushe/smtp-server:latest
     container_name: smtp-server
     restart: unless-stopped
     ports:
