--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,11 @@ uvicorn==0.22.0
 pydantic==1.10.7
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
+atpublic==4.0
+pytest-cov==4.0.0
+attrs>=21.2.0
+cryptography>=3.4.7
+PyJWT>=2.0.0
+dnspython>=2.0.0
+idna>=2.0.0
+tomli>=1.0.0
