feat: Make SMTP and HTTP server environment variables configurable with defaults.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,22 @@ services:
       - "8025:8025"  # SMTP port
     environment:
       # SMTP Server Configuration (listening)
-      - SMTP_HOST=0.0.0.0  # Listen on all interfaces
-      - SMTP_PORT=8025     # Port to listen on
-      - ENABLE_AUTH=true   # Enable SMTP authentication
-      - SMTP_USERNAME=${SMTP_USERNAME:-}
-      - SMTP_PASSWORD=${SMTP_PASSWORD:-}
-      - ENABLE_TLS=false
-      - MAX_MESSAGE_SIZE=25000
+      - SMTP_HOST=${SMTP_HOST:-0.0.0.0}
+      - SMTP_PORT=${SMTP_PORT:-8025}
+      - ENABLE_AUTH=${ENABLE_AUTH:-true}
+      - SMTP_USERNAME=${SMTP_USERNAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - ENABLE_TLS=${ENABLE_TLS:-false}
+      - MAX_MESSAGE_SIZE=${MAX_MESSAGE_SIZE:-25000}
       # HTTP Configuration
-      - HTTP_HOST=0.0.0.0
-      - HTTP_PORT=8000
-      - API_PREFIX=/api/v1
+      - HTTP_HOST=${HTTP_HOST:-0.0.0.0}
+      - HTTP_PORT=${HTTP_PORT:-8000}
+      - API_PREFIX=${API_PREFIX:-/api/v1}
       - DEBUG=${DEBUG:-false}
       # Gmail SMTP Configuration (for sending emails)
-      - GMAIL_SMTP_SERVER=smtp.gmail.com
-      - GMAIL_SMTP_PORT=587
-      - GMAIL_USE_TLS=true
+      - GMAIL_SMTP_SERVER=${GMAIL_SMTP_SERVER:-smtp.gmail.com}
+      - GMAIL_SMTP_PORT=${GMAIL_SMTP_PORT:-587}
+      - GMAIL_USE_TLS=${GMAIL_USE_TLS:-true}
     volumes:
       - ./data:/app/data
     healthcheck:
